hphp/test/zend/good/tests/lang/func_get_arg.003.php
<?php

var_dump (func_get_arg(0));

?>