hphp/test/zend/bad/ext/date/tests/date_add_basic2.php
<?php
var_dump(date_add()); // invalid parameters
?>